fix(gh50): Sections 9-18 — zipalign, skip_stderr family, strip j$.*, quarantine, AVD 30, apksigner
Sections 9-18 of gh50-improve-instrumentation covering the full JCA-400
validation round after Phase B revealed runtime regressions.

Pipeline fixes (rvandroid.py + config.py + assets):
- Section 9: zipalign -P 16 4 after apksigner — 16 KiB page alignment for
  modern APKs with android:extractNativeLibs=false (INSTALL_FAILED_INVALID_APK
  res=-2).
- Section 10: skip_stderr=True on rv-frame-computer — per-class warnings are
  intentional non-fatal output; old code treated any stderr as failure
  (INV-INS-19 widened).
- Section 12: ASM COMPUTE_FRAMES pre-ajc in addition to post — feeds BCEL
  classes with rebuilt StackMapTable so the weaver does not crash on
  "Index -1" for classes missing frames.
- Section 13: strip pre-desugared j$/** classes after dex2jar — d8 rejects
  merging j$.* shims with our non-java.* instrumentation classes.
- Section 14: skip_stderr=True on ajc — with -proceedOnError ajc exits 0 even
  on per-class Index -1 stacktraces; old code treated those as APK failure.
- Section 15: skip_stderr=True on maven — JDK 21+ emits native-access
  warnings on every invocation; old code misreported as CommandException.
- Section 16: quarantine problematic library classes (okio, media3, tika,
  licensing, bouncycastle, web3j) — ajc/d8 ABORT-level crashes on these
  cannot be rescued by per-class flags; move them aside pre-ajc, restore
  before __create_apk so library bytecode ships unchanged.
- Section 17: AVD upgrade API 29 x86 -> API 30 x86_64 (Dockerfile ARG
  API_LEVEL=30, ARCHITECTURE=x86_64); lifts SDK compat from 91% to 95.8%
  on JCA-400, adds x86_64 ABI coverage, keeps below API 31 Foreground
  Service restrictions.
- Section 18: replace d2j-apk-sign + jarsigner chain with apksigner
  (v1+v2+v3 in one shot) — API 30+ rejects v1-only APKs with
  INSTALL_PARSE_FAILED_NO_CERTIFICATES. Deleted legacy methods entirely
  (CLAUDE.md P3), added keystore_alias f